<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_hamburguesa"
        android:layout_width="128dp"
        android:layout_height="135dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="140dp"
        android:contentDescription="@string/hamburguesa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hamburguesa2" />

    <EditText
        android:id="@+id/edt_nombre_hamburguesa"
        android:layout_width="372dp"
        android:layout_height="67dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="mc pollo"
        android:ems="10"
        android:hint="@string/nombre_hamburguesa"
        android:inputType="textPersonName"
        android:textColorHint="@color/morado"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_hamburguesa" />

    <EditText
        android:id="@+id/edt_nombre_complemento"
        android:layout_width="372dp"
        android:layout_height="67dp"
        android:layout_marginTop="40dp"
        android:autofillHints="mc pollo"
        android:ems="10"
        android:hint="@string/nombre_complemento"
        android:inputType="textPersonName"
        android:textColorHint="@color/morado"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_nombre_hamburguesa"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_nombre_hamburguesa"
        app:layout_constraintTop_toBottomOf="@+id/edt_nombre_hamburguesa" />

    <Button
        android:id="@+id/bt_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:onClick="siguiente"
        android:text="@string/siguiente"
        app:layout_constraintEnd_toEndOf="@+id/edt_nombre_complemento"
        app:layout_constraintTop_toBottomOf="@+id/edt_nombre_complemento" />
</androidx.constraintlayout.widget.ConstraintLayout>